# spectralbrain

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  environment.yml  pyproject.toml  setup_uv.sh
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml  python-publish.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/about/: changelog.md  citing.md  contributing.md
docs/source/api/: index.md
docs/source/examples/: README.txt  plot_hks_surface.py  plot_shapedna_distance.py
docs/source/getting_started/: index.md  installation.md  quickstart.md
docs/source/howto/: index.md
docs/source/learn/: bates_descriptors.md  functional_maps_and_distances.md  global_embeddings.md  heat_descriptors.md  index.md  laplace_beltrami.md  normative_modeling.md  spectral_descriptors.md  wave_descriptors.md  wavelet_descriptors.md
docs/source/tutorials/: index.md
paper/: _figstyle.py  fig1_architecture.py  fig2_ingestion.py  fig3_pipeline.py  fig4_statistics.py  paper.bib  paper.md
src/spectralbrain/: __init__.py  gpu.py  runtime.py
src/spectralbrain/backends/: __init__.py  cpu.py  gpu.py
src/spectralbrain/core/: __init__.py  base.py  meshes.py  pointclouds.py
src/spectralbrain/io/: __init__.py  export.py  gpu_preprocess.py  group.py  loaders.py  parcellate.py  preprocess.py  tractseg.py
src/spectralbrain/spectral/: __init__.py  anisotropic.py  collections.py  descriptors.py  distances.py  wavelets.py
src/spectralbrain/statistics/: __init__.py  analysis.py  bayesian.py  clustering.py  eda.py  normative.py  surrogates.py
src/spectralbrain/utils/: __init__.py  atlas.py  datasets.py  helpers.py
src/spectralbrain/viz/: __init__.py  bayes.py  brainplots.py  clusters.py  graphics.py  hipp.py  hipp3d.py
src/spectralbrain/viz/geometry/: __init__.py  meshes.py  points.py
tests/: test_backends.py  test_group.py  test_io.py  test_smoke.py  test_spectral.py  test_statistics.py  test_tractseg.py  test_viz_hipp3d.py
tutorials/: 01_laplace_beltrami_operator.ipynb  02_reading_real_brains_io.ipynb  03_shapedna_global_fingerprint.ipynb  04_heat_kernel_signature.ipynb  05_wave_kernel_and_gps.ipynb  06_pointclouds_and_tracts.ipynb  07_functional_maps_and_distances.ipynb  09_effectsizes_classification_harmonization.ipynb  README.md  _nbbuild.py  _tutorial_utils.py  gen_nb01.py  gen_nb02.py  gen_nb03.py  gen_nb04.py  gen_nb05.py  gen_nb06.py  gen_nb07.py  gen_nb08.py  gen_nb09.py  gen_nb10.py
tutorials/data/: manifest.json
tutorials/data/fs/sub01/: aparc.a2009s+aseg.mgz  lh.area.pial  lh.area.pial.fwhm15.fsaverage.mgh  lh.hippoAmygLabels-T1.v22.mgz  rh.area.pial  rh.area.pial.fwhm15.fsaverage.mgh  rh.hippoAmygLabels-T1.v22.mgz
tutorials/data/fs/sub02/: aparc.a2009s+aseg.mgz  lh.area.pial  lh.area.pial.fwhm15.fsaverage.mgh  lh.hippoAmygLabels-T1.v22.mgz  rh.area.pial  rh.area.pial.fwhm15.fsaverage.mgh  rh.hippoAmygLabels-T1.v22.mgz
tutorials/data/hippunfold/sub03/: hemi-L_space-T1w_den-8k_label-hipp_midthickness.surf.gii  hemi-R_space-T1w_den-8k_label-hipp_midthickness.surf.gii
tutorials/data/hippunfold/sub04/: hemi-L_space-T1w_den-8k_label-hipp_midthickness.surf.gii  hemi-R_space-T1w_den-8k_label-hipp_midthickness.surf.gii
